[gd_scene load_steps=4 format=3 uid="uid://ctwo53x4gnjm4"]

[ext_resource type="Texture2D" uid="uid://0wjecsdf4nya" path="res://art/spritesforgamefr/start_menu_bg.png" id="1_nxx2i"]
[ext_resource type="Script" path="res://scripts/start.gd" id="1_snq6x"]
[ext_resource type="VideoStream" path="res://videos/intro.ogv" id="3_74r4t"]

[node name="start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_snq6x")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575.5, 326.5)
scale = Vector2(1.5013, 1.52546)
texture = ExtResource("1_nxx2i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="begin" type="Button" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 168.0
offset_right = 634.0
offset_bottom = 213.0
text = "Play"

[node name="end" type="Button" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 314.0
offset_right = 634.0
offset_bottom = 355.0
text = "Quit"

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
z_index = 2
layout_mode = 0
offset_left = -1.0
offset_right = 1279.0
offset_bottom = 720.0
scale = Vector2(0.9, 0.9)
stream = ExtResource("3_74r4t")
autoplay = true

[node name="controlsss" type="Button" parent="."]
layout_mode = 0
offset_left = 370.0
offset_top = 238.0
offset_right = 633.0
offset_bottom = 283.0
text = "Controls"

[connection signal="pressed" from="begin" to="." method="_on_begin_pressed"]
[connection signal="pressed" from="end" to="." method="_on_end_pressed"]
[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="controlsss" to="." method="_on_controlsss_pressed"]
